body heigh and center alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,14 @@ body {
  font-family: 'Outfit', sans-serif;
  background-color: hsl(212, 45%, 89%);
  color: hsl(218, 44%, 22%);
- margin: 0;
- padding: 8%;
  display: flex;
  justify-content: center;
  align-items: center;
-
+ height: 98vh;
  main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   .card {
    background-color: hsl(0, 0%, 100%);
    border-radius: 20px;
